--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
@@ -89,6 +89,22 @@
     prototypes:
     - CP14MobFrog
 
+- type: entity
+  name: sheep spawner
+  id: CP14SpawnMobSheep
+  parent: MarkerBase
+  categories: [ ForkFiltered ]
+  components:
+  - type: Sprite
+    layers:
+    - sprite: Markers/cross.rsi
+      state: green
+    - sprite: _CP14/Mobs/Animals/sheep.rsi
+      state: sheep
+  - type: ConditionalSpawner
+    prototypes:
+    - CP14MobSheep
+
 # Dino
 
 - type: entity
