--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
@@ -105,7 +105,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.35
-        density: 100
+        density: 150
         mask:
         - MobMask
         layer:
@@ -330,3 +330,90 @@
         volume: -8
         variation: 0.125
   - type: SoundWhileAlive
+
+- type: entity
+  id: CP14MobSheep
+  parent: CP14SimpleMobBase
+  name: sheep
+  description: White and fluffy as a cloud sheep.
+  categories: [ ForkFiltered ]
+  components:
+  - type: HTN
+    rootTask:
+      task: RuminantCompound
+  - type: NpcFactionMember
+    factions:
+    - CP14PeacefulAnimals
+  - type: Sprite
+    drawdepth: Mobs
+    layers:
+    - map: ["enum.DamageStateVisualLayers.Base"]
+      sprite: _CP14/Mobs/Animals/sheep.rsi
+      state: sheep
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.35
+        density: 100
+        mask:
+        - MobMask
+        layer:
+        - MobLayer
+  - type: Tag
+    tags:
+    - CP14Sheep
+  - type: Reproductive
+    partnerWhitelist:
+      tags:
+      - CP14Sheep
+    offspring:
+    - id: CP14MobSheep
+      maxAmount: 1
+  - type: ReproductivePartner
+  - type: Speech
+    speechSounds: Goat
+    speechVerb: Goat
+  - type: Vocal
+    sounds:
+      Female: Goat
+      Male: Goat
+      Unsexed: Goat
+  - type: Appearance
+  - type: MobThresholds
+    thresholds:
+      0: Alive
+      50: Dead
+  - type: CombatMode
+  - type: MeleeWeapon
+    angle: 0
+    animation: WeaponArcPunch
+    damage:
+      types:
+        Blunt: 5
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 4
+    baseSprintSpeed : 4
+  - type: DamageStateVisuals
+    states:
+      Alive:
+        Base: sheep
+      Dead:
+        Base: dead
+  - type: Butcherable
+    spawned:
+    - id: CP14FoodMeatLamb
+      amount: 4
+    - id: CP14String # As long as there are no mechanics to shearing wool, the only way to get string.
+      amount: 4
+  - type: Bloodstream
+    bloodMaxVolume: 200
+    bloodReagent: CP14Blood
+  - type: InteractionPopup
+    successChance: 0.5
+    interactSuccessString: petting-success-goat
+    interactFailureString: petting-failure-goat
+    interactSuccessSpawn: EffectHearts
+    interactSuccessSound:
+      path: /Audio/Animals/goat_bah.ogg
