--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/Empire/sell.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/Empire/sell.yml
@@ -6,6 +6,8 @@
     sprite: _CP14/Objects/Materials/copper_bar.rsi
     state: bar_3
   price: 150
+  factions:
+  - Empire
   service: !type:CP14SellStackService
     stackId: CP14CopperBar
     count: 10
@@ -18,6 +20,8 @@
     sprite: _CP14/Objects/Materials/copper_ore.rsi
     state: ore3
   price: 20
+  factions:
+  - Empire
   service: !type:CP14SellStackService
     stackId: CP14OreCopper
     count: 10
@@ -30,6 +34,8 @@
     sprite: _CP14/Objects/Materials/iron_bar.rsi
     state: bar_3
   price: 300
+  factions:
+  - Empire
   service: !type:CP14SellStackService
     stackId: CP14IronBar
     count: 10
@@ -42,6 +48,8 @@
     sprite: _CP14/Objects/Materials/iron_ore.rsi
     state: ore3
   price: 30
+  factions:
+  - Empire
   service: !type:CP14SellStackService
     stackId: CP14OreIron
     count: 10
@@ -54,6 +62,8 @@
     sprite: _CP14/Objects/Materials/gold_bar.rsi
     state: bar_3
   price: 1200
+  factions:
+  - Empire
   service: !type:CP14SellStackService
     stackId: CP14GoldBar
     count: 10
@@ -66,6 +76,8 @@
     sprite: _CP14/Objects/Materials/gold_ore.rsi
     state: ore3
   price: 120
+  factions:
+  - Empire
   service: !type:CP14SellStackService
     stackId: CP14OreGold
     count: 10
@@ -78,6 +90,8 @@
     sprite: _CP14/Objects/Materials/mithril_bar.rsi
     state: bar_3
   price: 2500
+  factions:
+  - Empire
   service: !type:CP14SellStackService
     stackId: CP14MithrilBar
     count: 10
@@ -90,6 +104,36 @@
     sprite: _CP14/Objects/Materials/mithril_ore.rsi
     state: ore3
   price: 250
+  factions:
+  - Empire
   service: !type:CP14SellStackService
     stackId: CP14OreMithril
+    count: 10
+
+- type: storePositionSell
+  id: Wood
+  name: cp14-store-sell-wood-name
+  desc: cp14-store-sell-wood-desc
+  icon: 
+    sprite: _CP14/Objects/Materials/wood.rsi
+    state: planks_3
+  price: 20
+  factions:
+  - Empire
+  service: !type:CP14SellStackService
+    stackId: CP14WoodenPlanks
+    count: 30
+
+- type: storePositionSell
+  id: Glass
+  name: cp14-store-sell-glass-name
+  desc: cp14-store-sell-glass-desc
+  icon: 
+    sprite: _CP14/Objects/Materials/glass.rsi
+    state: glass_3
+  price: 100
+  factions:
+  - Empire
+  service: !type:CP14SellStackService
+    stackId: CP14GlassSheet
     count: 10
