--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -127,6 +127,7 @@
   - CP14GeneralSpells
   - CP14GuildmasterOuterClothing
   - CP14GeneralEyes
+  - CP14GuildmasterHead
   - CP14GuildmasterCloak
   - CP14GuildmasterShirt
   - CP14GuildmasterPants
