--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/SpiceStream/sell.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/SpiceStream/sell.yml
@@ -1,139 +1,129 @@
 - type: storePositionSell
   id: CopperBars
-  name: cp14-store-sell-copperbar-name
   desc: cp14-store-sell-copperbar-desc
   icon: 
     sprite: _CP14/Objects/Materials/copper_bar.rsi
     state: bar_3
   price: 150
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14CopperBar
     count: 10
 
 - type: storePositionSell
   id: CopperOre
-  name: cp14-store-sell-copperore-name
   desc: cp14-store-sell-copperore-desc
   icon: 
     sprite: _CP14/Objects/Materials/copper_ore.rsi
     state: ore3
   price: 20
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14OreCopper
     count: 10
 
 - type: storePositionSell
   id: IronBars
-  name: cp14-store-sell-ironbar-name
   desc: cp14-store-sell-ironbar-desc
   icon: 
     sprite: _CP14/Objects/Materials/iron_bar.rsi
     state: bar_3
   price: 300
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14IronBar
     count: 10
 
 - type: storePositionSell
   id: IronOre
-  name: cp14-store-sell-ironore-name
   desc: cp14-store-sell-ironore-desc
   icon: 
     sprite: _CP14/Objects/Materials/iron_ore.rsi
     state: ore3
   price: 30
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14OreIron
     count: 10
 
 - type: storePositionSell
   id: GoldBars
-  name: cp14-store-sell-goldbar-name
   desc: cp14-store-sell-goldbar-desc
   icon: 
     sprite: _CP14/Objects/Materials/gold_bar.rsi
     state: bar_3
   price: 1200
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14GoldBar
     count: 10
 
 - type: storePositionSell
   id: GoldOre
-  name: cp14-store-sell-goldore-name
   desc: cp14-store-sell-goldore-desc
   icon: 
     sprite: _CP14/Objects/Materials/gold_ore.rsi
     state: ore3
   price: 120
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14OreGold
     count: 10
 
 - type: storePositionSell
   id: MithrilBars
-  name: cp14-store-sell-mithrilbar-name
   desc: cp14-store-sell-mithrilbar-desc
   icon: 
     sprite: _CP14/Objects/Materials/mithril_bar.rsi
     state: bar_3
   price: 2500
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14MithrilBar
     count: 10
 
 - type: storePositionSell
   id: MithrilOre
-  name: cp14-store-sell-mithrilore-name
   desc: cp14-store-sell-mithrilore-desc
   icon: 
     sprite: _CP14/Objects/Materials/mithril_ore.rsi
     state: ore3
   price: 250
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14OreMithril
     count: 10
 
 - type: storePositionSell
   id: Wood
-  name: cp14-store-sell-wood-name
   desc: cp14-store-sell-wood-desc
   icon: 
     sprite: _CP14/Objects/Materials/wood.rsi
     state: planks_3
   price: 20
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14WoodenPlanks
     count: 30
 
 - type: storePositionSell
   id: Glass
-  name: cp14-store-sell-glass-name
   desc: cp14-store-sell-glass-desc
   icon: 
     sprite: _CP14/Objects/Materials/glass.rsi
     state: glass_3
   price: 100
   factions:
-  - Empire
+  - SpiceStream
   service: !type:CP14SellStackService
     stackId: CP14GlassSheet
     count: 10
