--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/Sylphoria/sell_special.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/Sylphoria/sell_special.yml
@@ -1,15 +1,15 @@
 - type: storePositionSell
   id: BountySpellScroll
   special: true
-  name: cp14-store-sell-special-spell-scroll-name
   desc: cp14-store-sell-special-spell-scroll-desc
   icon: 
     sprite: _CP14/Objects/Bureaucracy/paper.rsi
     state: magic
   price: 200
   factions:
-  - Hunters
+  - Sylphoria
   service: !type:CP14SellWhitelistService
+    name: cp14-store-sell-special-spell-scroll-name
     whitelist:
       tags: 
       - CP14SpellScroll
@@ -18,16 +18,25 @@
 - type: storePositionSell
   id: BountyTorch
   special: true
-  name: cp14-store-sell-special-torch-name
   desc: cp14-store-sell-special-torch-desc
   icon: 
     sprite: _CP14/Objects/Tools/torch.rsi
     state: torch-unlit
   price: 200
   factions:
-  - Hunters
-  service: !type:CP14SellWhitelistService
-    whitelist:
-      tags: 
-      - CP14Torch
+  - Sylphoria
+  service: !type:CP14SellPrototypeService
+    proto: CP14Torch
     count: 20
+
+- type: storePositionSell
+  id: BountyLucenPlanks
+  special: true
+  desc: cp14-store-sell-special-lucen-desc
+  icon: 
+    sprite: _CP14/Objects/Materials/lucens_wood.rsi
+    state: planks_2
+  price: 300
+  service: !type:CP14SellStackService
+    stackId: CP14LucensWoodenPlanks
+    count: 10
