--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/factions.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/factions.yml
@@ -1,23 +1,23 @@
 - type: storeFaction
-  id: Empire
-  name: cp14-faction-name-empire
-  desc: cp14-faction-desc-empire
-  color: "#42b3f5"
-
-- type: storeFaction
   id: HelmirWeapon
   name: cp14-faction-name-helmir
   desc: cp14-faction-desc-helmir
   color: "#c91c22"
 
 - type: storeFaction
-  id: Hunters
-  name: cp14-faction-name-hunter
-  desc: cp14-faction-desc-hunter
+  id: Sylphoria
+  name: cp14-faction-name-sylphoria
+  desc: cp14-faction-desc-sylphoria
   color: "#33802a"
 
 - type: storeFaction
-  id: Food
-  name: cp14-faction-name-food
-  desc: cp14-faction-desc-food
+  id: SpiceStream
+  name: cp14-faction-name-spice-stream
+  desc: cp14-faction-desc-spice-stream
   color: "#d64db6"
+
+- type: storeFaction
+  id: BradFamily
+  name: cp14-faction-brad-family
+  desc: cp14-faction-brad-family
+  color: "#42b3f5"
