--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Crystal/shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Crystal/shards.yml
@@ -31,7 +31,7 @@
 - type: entity
   parent: CP14CrystalShardBase
   id: CP14CrystalShardEarth
-  suffix: Terra
+  name: terra quartz shard
   components:
   - type: Sprite
     color: "#70533f"
@@ -43,7 +43,7 @@
 - type: entity
   parent: CP14CrystalShardBase
   id: CP14CrystalShardFire
-  suffix: Ignis
+  name: ignis quartz shard
   components:
   - type: Sprite
     color: "#d9741c"
@@ -55,7 +55,7 @@
 - type: entity
   parent: CP14CrystalShardBase
   id: CP14CrystalShardWater
-  suffix: Ignis
+  name: aqua quartz shard
   components:
   - type: Sprite
     color: "#1c94d9"
@@ -67,7 +67,7 @@
 - type: entity
   parent: CP14CrystalShardBase
   id: CP14CrystalShardAir
-  suffix: Aer
+  name: aer quartz shard
   components:
   - type: Sprite
     color: "#def9ff"
@@ -79,7 +79,7 @@
 - type: entity
   parent: CP14CrystalShardBase
   id: CP14CrystalShardOrder
-  suffix: Ordo
+  name: ordo quartz shard
   components:
   - type: Sprite
     color: "#d9d9d9"
@@ -91,7 +91,7 @@
 - type: entity
   parent: CP14CrystalShardBase
   id: CP14CrystalShardChaos
-  suffix: Perditio
+  name: perditio quartz shard
   components:
   - type: Sprite
     color: "#5c5c5c"
