--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/SpiceStream/sell.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/SpiceStream/sell.yml
@@ -3,6 +3,7 @@
   price: 150
   factions:
   - SpiceStream
+  - HelmirWeapon
   service: !type:CP14SellStackService
     stackId: CP14CopperBar
     count: 10
@@ -21,6 +22,7 @@
   price: 300
   factions:
   - SpiceStream
+  - HelmirWeapon
   service: !type:CP14SellStackService
     stackId: CP14IronBar
     count: 10
@@ -39,6 +41,7 @@
   price: 1200
   factions:
   - SpiceStream
+  - HelmirWeapon
   service: !type:CP14SellStackService
     stackId: CP14GoldBar
     count: 10
@@ -57,6 +60,7 @@
   price: 2500
   factions:
   - SpiceStream
+  - HelmirWeapon
   service: !type:CP14SellStackService
     stackId: CP14MithrilBar
     count: 10
@@ -75,6 +79,7 @@
   price: 20
   factions:
   - SpiceStream
+  - HelmirWeapon
   service: !type:CP14SellStackService
     stackId: CP14WoodenPlanks
     count: 30
