--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/BradFamily/buy.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/BradFamily/buy.yml
@@ -143,7 +143,7 @@
 
 
 - type: storePositionBuy
-  id: CP14VialSmallHealingMana
+  id: CP14VialSmallSpeedUp
   code: SPEED_UP
   price: 70
   iconOverride: 
@@ -166,7 +166,7 @@
 
 
 - type: storePositionBuy
-  id: CP14VialSmallHealingMana
+  id: CP14VialSmallRainbow
   code: FUNNY_POTION
   price: 100
   iconOverride: 
