--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -32,7 +32,7 @@
     - map: [ "cloak" ]
     - map: [ "outerClothing" ]
     - map: [ "eyes" ]
-    - map: [ "belt1" ]
+    - map: [ "belt" ]
     - map: [ "belt2" ]
     - map: [ "neck" ]
     - map: [ "back" ]
