--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/mannequin.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/mannequin.yml
@@ -22,7 +22,7 @@
     - map: [ "shoes" ]
     - map: [ "cloak" ]
     - map: [ "eyes" ]
-    - map: [ "belt1" ]
+    - map: [ "belt" ]
     - map: [ "belt2" ]
     - map: [ "neck" ]
     - map: [ "back" ]
