--- a/Resources/Prototypes/_CP14/Maps/comoss.yml
+++ b/Resources/Prototypes/_CP14/Maps/comoss.yml
@@ -21,9 +21,7 @@
             CP14Alchemist: [ 2, 2 ]
             CP14Blacksmith: [ 2, 2 ]
             CP14Innkeeper: [ 3, 4 ]
-            #Traders
-            CP14Commandant: [1, 1]
-            CP14Merchant: [3, 4]
+            CP14Merchant: [2, 2]
             #Guard
             CP14Guard: [8, 8]
             CP14GuardCommander: [1, 1]
@@ -38,6 +36,8 @@
           - Alchemy2
           - Blacksmith1
           - Blacksmith2
+          - Shop1
+          - Shop2
           - PersonalHouse1
           - PersonalHouse2
           #- PersonalHouse3 #TODO: return
@@ -46,7 +46,7 @@
           - PersonalHouse6
           - PersonalHouse7
           - PersonalHouse8
-          - PersonalHouse9
+          #- PersonalHouse9 #TODO: return
           - PersonalHouse10
           - PersonalHouse11
           - PersonalHouse12
