--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -40,12 +40,12 @@ CP14VialSmallChromiumSlime: null
 CP14VialSmallLumiMushroom: null
 
 #2024-10-20
-CP14SpawnPointHouseKeeper: CP14SpawnPointCommandant
+CP14SpawnPointHouseKeeper: null
 CP14WoodenDoorTavernDorms: null
 CP14WallWhitebrick: CP14WallMarbleBrick
 
 #2024-10-24
-CP14SpawnPointQuartermaster: CP14SpawnPointCommandant
+CP14SpawnPointQuartermaster: null
 
 #2024-10-27
 CP14GatherableFlowersYellow: CP14GatherableDayflin
