--- a/Resources/Maps/_CP14/comoss.yml
+++ b/Resources/Maps/_CP14/comoss.yml
@@ -4,8 +4,8 @@ meta:
   engineVersion: 247.2.0
   forkId: ""
   forkVersion: ""
-  time: 03/05/2025 20:48:03
-  entityCount: 14876
+  time: 03/06/2025 08:19:45
+  entityCount: 14881
 maps:
 - 1
 grids:
@@ -65940,6 +65940,11 @@ entities:
     - type: Transform
       pos: -20.5,3.5
       parent: 2
+  - uid: 13486
+    components:
+    - type: Transform
+      pos: -27.5,-0.5
+      parent: 2
 - proto: CP14SpawnPointApprentice
   entities:
   - uid: 17913
@@ -65958,6 +65963,11 @@ entities:
     components:
     - type: Transform
       pos: -20.5,5.5
+      parent: 2
+  - uid: 13485
+    components:
+    - type: Transform
+      pos: -25.5,-6.5
       parent: 2
 - proto: CP14SpawnPointGuard
   entities:
@@ -66044,6 +66054,23 @@ entities:
     components:
     - type: Transform
       pos: -15.5,-21.5
+      parent: 2
+- proto: CP14SpawnPointMerchant
+  entities:
+  - uid: 13487
+    components:
+    - type: Transform
+      pos: 0.5,-59.5
+      parent: 2
+  - uid: 13488
+    components:
+    - type: Transform
+      pos: -25.5,-75.5
+      parent: 2
+  - uid: 13490
+    components:
+    - type: Transform
+      pos: 42.5,8.5
       parent: 2
 - proto: CP14SpellScrollBloodPurification
   entities:
