--- a/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
@@ -29,6 +29,29 @@
     - CP14ActionSpellIceShards
 
 - type: entity
+  id: CP14ClothingRingSkeletonWizard
+  parent: CP14ClothingRingBase
+  name: skeleton wizard conductive ring
+  suffix: Skeleton, Unremoveable
+  description: A mana conuctive ring for the true wizards
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Unremoveable
+  - type: CP14SpellStorageRequireAttune
+  - type: CP14MagicAttuningItem
+  - type: CP14SpellStorageAccessWearing
+  - type: CP14SpellStorage
+    spells:
+    - CP14ActionSpellIceShards
+    - CP14ActionSpellSphereOfLight
+    - CP14ActionSpellCureWounds
+    - CP14ActionSpellFlameCreation
+  - type: Sprite
+    layers:
+    - state: brass_ring
+    - state: berill_stone_small
+
+- type: entity
   id: CP14ClothingRingFireball
   parent: CP14ClothingRingBase
   name: fireball conductive ring
